<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstSocial</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="reset_error_message">Please make sure you enter correct username and email!</string>
    <string name="reset_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="password_forgot">Forgot your password?</string>
    <string name="password_reset">Reset Password</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="email_send_for_reset_password">Please check your email to reset password!</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="optional">Optional Below</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="hometown_hint">Hometown</string>
    <string name="interest_hint">Interest</string>
    <string name="title_activity_friends_detail">Friend Detail</string>
    
    <string name="following_actions">Following\.\.\.</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_size_limit_warning">The selected video must be less than 10 MB.</string>
    <string name="error_selecting_file">There was a problem with the selected file.</string>
    <string name="error_file_too_large">The selected file is too large! Select a new file.</string>
    <string-array name="camera_choices">
        <item >Take Picture</item>
        <item >Take Video</item>
        <item >Choose Picture</item>
        <item >Choose Video</item>
    </string-array>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB.</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">FirstSocial</string>

    <string name="menu_new_text_label">New text</string>
    <string name="new_text_message">Text message to share with friends</string>
    <string name="new_text_title">New Text Message</string>
    <string name="text_title">Text Message</string>
    <string name="error_getting_message">There was a problem with the selected message</string>
    <string name="menu_refresh">Refresh</string>
    <!-- app id in facebook -->
    <string name="app_id">1416981311898788</string>
    
    <string name="fblogin">Log In</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Check out your Facebook profile by logging in with the button below!</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="fb_session_invalid">The facebook session was invalidated.</string>
    
</resources>
