<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.chaoqun.firstsocial.MainActivity" >
    
	<item android:id="@+id/action_edit_friends" android:title="@string/menu_edit_friends_label"></item><item android:id="@+id/action_logout" android:title="@string/menu_logout_label"></item>
	<item android:id="@+id/action_camera" android:icon="@drawable/ic_action_camera" android:title="@string/menu_camera_label" android:showAsAction="always"></item>
	<item android:id="@+id/action_new_text" android:icon="@drawable/ic_action_new" android:title="@string/menu_new_text_label" android:showAsAction="always"></item>
	<item android:id="@+id/action_refresh" android:icon="@drawable/ic_action_refresh" android:title="@string/menu_refresh" android:showAsAction="always"></item>
	
</menu>
