<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity" >

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/username_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_below="@+id/usernameField"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" />

    <TextView 
        android:id = "@+id/optional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailField"
        android:layout_below="@+id/emailField"
        android:ems="10"
        android:text="@string/optional"/>
    
    <LinearLayout
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/optional"
        android:orientation="horizontal">
        
		<EditText
        	android:id="@+id/firstnameField"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:hint="@string/firstname_hint" 
        	android:layout_weight="1"/>
    
    	<EditText
        	android:id="@+id/lastnameField"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:hint="@string/lastname_hint" 
        	android:layout_weight="1"/>
    
    </LinearLayout>
    
    
    <EditText
        android:id="@+id/hometownField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nameField"
        android:layout_below="@+id/nameField"
        android:ems="10"
        android:hint="@string/hometown_hint" />
    
    <EditText
        android:id="@+id/interestField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hometownField"
        android:layout_below="@+id/hometownField"
        android:ems="10"
        android:hint="@string/interest_hint" />
    
    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/interestField"
        android:layout_below="@+id/interestField"
        android:text="@string/sign_up_button_label" />

</RelativeLayout>
